# shoot-client

./: .eslintrc.cjs  .gitignore  .oxfmtrc.json  .oxlintrc.json  README.md  biome.json  capojs.d.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.worker.json  vite.config.js  vite.config.ts
assets/: client.json
public/: manifest.json  serviceWorker.js
src/: App.svelte  Home.svelte  Login.svelte  app.css  app.tsx  fallback.tsx  index.css  main.ts  main.tsx  routeTree.gen.ts  serviceWorker.ts  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/plugins/tauri-plugin-unifiedpush/: .gitignore  Cargo.toml  README.md  build.rs
src-tauri/plugins/tauri-plugin-unifiedpush/android/: build.gradle.kts
src-tauri/plugins/tauri-plugin-unifiedpush/android/src/main/: AndroidManifest.xml
src-tauri/plugins/tauri-plugin-unifiedpush/android/src/main/java/dev/understars/shoot/unifiedpush/: UnifiedPushNotifier.kt  UnifiedPushPlugin.kt  UnifiedPushReceiver.kt
src-tauri/plugins/tauri-plugin-unifiedpush/permissions/: default.toml
src-tauri/plugins/tauri-plugin-unifiedpush/permissions/autogenerated/: reference.md
src-tauri/plugins/tauri-plugin-unifiedpush/permissions/autogenerated/commands/: get_saved_distributor.toml  list_distributors.toml  register_for_push_notifications.toml  set_distributor.toml  unregister_for_push_notifications.toml
src-tauri/plugins/tauri-plugin-unifiedpush/permissions/schemas/: schema.json
src-tauri/plugins/tauri-plugin-unifiedpush/src/: commands.rs  lib.rs  mobile.rs
(+203 files in other folders)
