[package]
name = "tauri-plugin-unifiedpush"
version = "0.1.0"
edition = "2024"
links = "tauri-plugin-unifiedpush"

[dependencies]
tauri = { version = "2", features = [] }
serde = "1"
serde_json = "1"
log = "0.4"
thiserror = "2"

[target.'cfg(target_os = "android")'.dependencies]
tauri = { version = "2" }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
